# mw

./: .env.example  .env.server.example  .gitignore  CLAUDE.md  MEDIA_SETUP.md  display_handling_prompt.txt  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  wrangler.toml
docs/: 2025-12-30-mdns-fix-summary.md
docs/plans/: 2025-12-28-live-control-mvp-design.md  2025-12-28-live-control-mvp.md  2025-12-28-webrtc-design.md  2025-12-28-webrtc-implementation.md  2025-12-29-android-tv-design.md  webrtc-test-results.txt  (+12 more)
e2e/: auth-signup.spec.ts  debug-media.spec.ts  media-bugs.spec.ts  media.spec.ts
public/: config.json
scripts/: create-test-fixtures.js  deploy-cloudflare-example.sh  deploy-secrets.sh  deploy-to-device.sh  fix-media-table.sh  ios-simulator.sh  release-android-firetv.sh  verify-media-table.sql
src/: App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  display.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/edid/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/mdns/: discovery.rs  mod.rs  service.rs  udp_broadcast.rs
src-tauri/src/nats/: client.rs  discovery.rs  mod.rs  server.rs  state.rs  types.rs
src-tauri/src/webrtc/: channel.rs  discovery.rs  election.rs  election_test.rs  mod.rs  peer.rs  peer_connection.rs  signaling.rs  tcp_p2p.rs  types.rs
src-tauri/src/websocket/: mod.rs  server.rs  types.rs
supabase/: config.toml
(+144 files in other folders)
