[package]
name = "mobile-worship"
version = "0.1.0"
description = "Mobile Worship App"
authors = ["you"]
edition = "2021"

[lib]
name = "mobile_worship_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"

# WebRTC dependencies
webrtc = "0.11"
tokio-tungstenite = "0.24"
mdns = "3.0"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
