[package]
name = "mobile-worship"
version = "0.1.0"
description = "Mobile Worship App"
authors = ["you"]
edition = "2021"

[lib]
name = "mobile_worship_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# NATS
async-nats = "0.36"
mdns = "3.0"
futures-util = "0.3"
async-std = "1.12"
